yamls/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-springboot-rest
  labels:
    app: backend-springboot-rest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-springboot-rest
  template:
    metadata:
      labels:
        app: backend-springboot-rest
    spec:
      containers:
        - name: backend-springboot-rest-mongodb-starter
          image: hanymichael/backend-springboot-rest-mongodb-starter
          ports:
            - containerPort: 8080
