yamls/02-service-w-type-LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-springboot-rest-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: backend-springboot-rest
