yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-springboot-rest
  labels:
    app: backend-springboot-rest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-springboot-rest
  template:
    metadata:
      labels:
        app: backend-springboot-rest
    spec:
      containers:
        - name: backend-springboot-rest-mongodb-starter
          image: hanymichael/backend-springboot-rest-mongodb-starter:v1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-springboot-rest-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      #   nodePort: 30102
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: backend-springboot-rest
