yamls/04-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hany-springboot-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hany-springboot-app
spec:
  hosts:
    - "*"
  gateways:
    - hany-springboot-app-gateway
  http:
    - match:
        - uri:
            exact: /api/products
      route:
        - destination:
            host: products
            port:
              number: 8080
